--- a/src/sample/start.fxml
+++ b/src/sample/start.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,10 +19,6 @@
          <font>
             <Font name="Avenir Light" size="13.0" />
          </font></Button>
-      <ScrollPane layoutX="30.0" layoutY="95.0" prefHeight="164.0" prefWidth="200.0">
-         <content>
-            <TextField fx:id="itemSearch" prefHeight="27.0" prefWidth="200.0" promptText="Søg vare..." />
-         </content></ScrollPane>
       <Label layoutX="195.0" layoutY="38.0" prefHeight="29.0" prefWidth="123.0" text="Indkøbsliste" textFill="#4d4d4d">
          <font>
             <Font name="Avenir Light" size="22.0" />
@@ -34,5 +30,7 @@
             <Font name="Avenir Light" size="13.0" />
          </font></Button>
       <TextArea fx:id="listDisplay" layoutX="286.0" layoutY="259.0" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="itemDisplay" layoutX="35.0" layoutY="166.0" onMouseClicked="#itemClicked" prefHeight="200.0" prefWidth="200.0" />
+      <TextField fx:id="itemSearch" layoutX="55.0" layoutY="117.0" promptText="Søg vare..." />
    </children>
 </AnchorPane>
