--- a/src/sample/start.fxml
+++ b/src/sample/start.fxml
@@ -31,5 +31,6 @@
             <Font name="Avenir Light" size="13.0" />
          </font></Label>
       <ComboBox layoutX="284.0" layoutY="82.0" prefWidth="150.0" promptText="Varekategori" />
+      <Label fx:id="subTotal" layoutX="391.0" layoutY="478.0" text="Subtotal" />
    </children>
 </AnchorPane>
