--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -41,7 +41,7 @@
                </children></AnchorPane>
             <Label alignment="CENTER" layoutX="90.0" layoutY="25.0" prefHeight="92.0" prefWidth="93.0" style="-fx-background-color: #a1bfbf; -fx-background-radius: 50px; -fx-border-color: #4d4d4d; -fx-border-radius: 50px;" text="Plan &amp; Buy" textFill="#4d4d4d">
                <font>
-                  <Font name="Avenir Light" size="16.0" />
+                  <Font name="SignPainter-HouseScript" size="21.0" />
                </font>
             </Label>
             <Button fx:id="signUpBtn" layoutX="75.0" layoutY="210.0" mnemonicParsing="false" onAction="#signUp" prefHeight="21.0" prefWidth="123.0" style="-fx-background-radius: 2px; -fx-background-color: #4d4d4d;" text="Sign up" textFill="WHITE">
