--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -34,7 +34,7 @@
                         <Font name="Avenir Light" size="9.0" />
                      </font>
                   </Hyperlink>
-                  <Button fx:id="logInBtn" blendMode="HARD_LIGHT" layoutX="39.0" layoutY="188.0" mnemonicParsing="false" onAction="#login" prefHeight="21.0" prefWidth="123.0" style="-fx-background-radius: 2px;" text="Log ind" textFill="#4d4d4d">
+                  <Button fx:id="loginBtn" blendMode="HARD_LIGHT" layoutX="39.0" layoutY="188.0" mnemonicParsing="false" onAction="#login" prefHeight="21.0" prefWidth="123.0" style="-fx-background-radius: 2px;" text="Log ind" textFill="#4d4d4d">
                      <font>
                         <Font name="Avenir Light" size="10.0" />
                      </font></Button>
