--- a/src/sample/start.fxml
+++ b/src/sample/start.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -30,11 +29,14 @@
          <font>
             <Font name="Avenir Light" size="13.0" />
          </font></Label>
+      <Button fx:id="payBtn" blendMode="HARD_LIGHT" layoutX="332.0" layoutY="96.0" mnemonicParsing="false" onAction="#pay" text="Betal" textFill="#4d4d4d">
+         <font>
+            <Font name="Avenir Light" size="10.0" />
+         </font></Button>
       <Label layoutX="305.0" layoutY="143.0" prefHeight="19.0" prefWidth="108.0" text="Min indkøbsliste" textFill="#4d4d4d">
          <font>
             <Font name="Avenir Light" size="13.0" />
          </font></Label>
-      <ComboBox blendMode="HARD_LIGHT" layoutX="284.0" layoutY="96.0" prefWidth="150.0" promptText="Varekategori" />
 
       <Label fx:id="subTotal" layoutX="391.0" layoutY="478.0" text="Subtotal" textFill="#4d4d4d">
          <font>
