--- a/src/sample/Payment.fxml
+++ b/src/sample/Payment.fxml
@@ -2,12 +2,36 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #bccbcb;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.PaymentController">
+<AnchorPane prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: #bccbcb;" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.PaymentController">
    <children>
-      <Button layoutX="273.0" layoutY="120.0" mnemonicParsing="false" text="Betal" />
-      <Label fx:id="subTotal" layoutX="270.0" layoutY="175.0" text="At Betale " />
-      <Button layoutX="30.0" layoutY="66.0" mnemonicParsing="false" onAction="#startReturn" text="Tilbage" />
+      <Button blendMode="HARD_LIGHT" layoutX="204.0" layoutY="428.0" mnemonicParsing="false" style="-fx-background-radius: 2PX;" text="Færdiggør betaling">
+         <font>
+            <Font name="Avenir Light" size="10.0" />
+         </font></Button>
+      <Label fx:id="subTotal" layoutX="207.0" layoutY="400.0" text="At Betale: " textFill="#4d4d4d">
+         <font>
+            <Font name="Avenir Light" size="10.0" />
+         </font></Label>
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#startReturn" prefHeight="27.0" prefWidth="31.0" text="←" />
+      <ListView blendMode="DARKEN" layoutX="148.0" layoutY="109.0" prefHeight="283.0" prefWidth="204.0" style="-fx-border-color: #a4a4a4; -fx-background-radius: 2px; -fx-border-radius: 2px;" />
+      <Label layoutX="203.0" layoutY="76.0" text="Min indkøbsliste" textFill="#4d4d4d">
+         <font>
+            <Font name="Avenir Light" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="200.0" layoutY="25.0" text="Betaling" textFill="#4d4d4d">
+         <font>
+            <Font name="SignPainter-HouseScript" size="29.0" />
+         </font>
+      </Label>
+      <Label layoutX="285.0" layoutY="27.0" prefHeight="27.0" prefWidth="27.0" style="-fx-background-color: #a1bfbf; -fx-background-radius: 50px; -fx-border-color: #4d4d4d; -fx-border-radius: 50px;" text=" Plan  &amp; buy" textFill="#4d4d4d">
+         <font>
+            <Font name="SignPainter-HouseScript" size="6.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
