--- a/src/sample/Payment.fxml
+++ b/src/sample/Payment.fxml
@@ -17,7 +17,7 @@
             <Font name="Avenir Light" size="10.0" />
          </font></Label>
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#startReturn" prefHeight="27.0" prefWidth="31.0" text="←" />
-      <ListView fx:id="shoppingCart" blendMode="DARKEN" layoutX="148.0" layoutY="109.0" prefHeight="283.0" prefWidth="204.0" style="-fx-border-color: #a4a4a4; -fx-background-radius: 2px; -fx-border-radius: 2px;" />
+      <ListView fx:id="finalShoppingcart" blendMode="DARKEN" layoutX="148.0" layoutY="109.0" prefHeight="283.0" prefWidth="204.0" style="-fx-border-color: #a4a4a4; -fx-background-radius: 2px; -fx-border-radius: 2px;" />
       <Label layoutX="203.0" layoutY="76.0" text="Min indkøbsliste" textFill="#4d4d4d">
          <font>
             <Font name="Avenir Light" size="13.0" />
